Añadidas imágenes mesas seleccionadas Navegación entre vistas Retroceso a vista anterior Seleccion de mesa en vista

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SeleccionMesa">
+
+        </activity>
+        <activity android:name=".CarritoVacio">
+
+        </activity>
+
+        <activity android:name=".Carta">
+
+        </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
