--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
 
         </activity>
 
+        <activity android:name=".Carrito">
+
+        </activity>
+
         <activity android:name=".Carta">
 
         </activity>
